--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/Zatewk/node-mysql-crud-app/issues"
   },
-  "homepage": "https://github.com/Zatewk/node-mysql-crud-app#readme"
+  "homepage": "https://github.com/Zatewk/node-mysql-crud-app#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
+    "mysql": "^2.16.0",
+    "req-flash": "0.0.3"
+  }
 }
